BR: fix scrollbar and new message pill

--- a/BorderRadiant/scss/_main.scss
+++ b/BorderRadiant/scss/_main.scss
@@ -686,7 +686,8 @@
 
 // Scrollbars
 .scrollerBase-1Pkza4::-webkit-scrollbar-thumb,
-.scrollerBase-1Pkza4::-webkit-scrollbar-track {
+.scrollerBase-1Pkza4::-webkit-scrollbar-track,
+.webkit-QgSAqd::-webkit-scrollbar-thumb {
     border-radius: 0;
 }
 
