--- a/BorderRadiant/scss/plugin/_horizontalserverlist.scss
+++ b/BorderRadiant/scss/plugin/_horizontalserverlist.scss
@@ -1,4 +1,4 @@
-#app-mount .guilds-2JjMmN {
+body #app-mount .guilds-2JjMmN {
     [class*=expandedFolderBackground],
     .frame-oXWS21[class*=listItem] .button-Jt-tIg,
     [class*=pill] span {
